--- a/src/app/pages/verification/components/verification/verification.component.css
+++ b/src/app/pages/verification/components/verification/verification.component.css
@@ -20,20 +20,41 @@ input {
   width: 4.5rem;
 }
 .tdwithin {
-  width: 6rem;
+  width: 130px;
+}
+.tdwithinplus {
+  width: 130px;
 }
 em {
   color: red;
 }
 .filter {
   margin-left: 44%;
-}
-table td {
-  text-align: left;
+  margin-top: 4px;
 }
 table input {
   text-align: center;
 }
 table thead {
   font-size: -5px;
+}
+tbody {
+  font-size: 12pt;
+}
+.indicator {
+  width: 250px;
+  text-align: left;
+}
+.sno {
+  width: 4px;
+}
+.iteration {
+  width: 260px !important;
+  text-align: center;
+}
+.trwithin {
+  width: 130px;
+}
+.total {
+  text-align: left;
 }
