--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -25,7 +25,7 @@
         Organization Unit Name: <u>{{ dataSelections[1].items[0].name }}</u>
       </h5>
       <br />
-      <table class="table table-bordered table-hover">
+      <table class="table table-bordered table-hover table-sm">
         <thead class="card-header">
           <tr>
             <th scope="col" rowspan="2" class="sno">S/No</th>
