--- a/src/app/pages/assessment/components/assessment/assessment.component.css
+++ b/src/app/pages/assessment/components/assessment/assessment.component.css
@@ -5,10 +5,6 @@
   margin: 5px;
   width: 100%;
 }
-.select {
-  background-color: rgb(39, 102, 150);
-  color: white;
-}
 .btn {
   margin: 3px;
   width: 32%;
@@ -30,9 +26,6 @@ input {
   margin-right: 4px;
   width: 100px;
 }
-select {
-  width: 100px;
-}
 .indicator {
   text-align: left;
 }
@@ -44,16 +37,21 @@ td,
   text-align: left;
   width: 100%;
 }
+.total {
+  text-align: left;
+}
+.total-tr {
+  font-weight: bold;
+}
 .mat-form-field {
-  height: 8px;
   width: 100px;
-  border: 2pt;
-  border-color: gray;
-  border: cadetblue;
+  height: 5px;
+  font-size: -4px;
+  line-height: 1;
 }
-.mat-form-field-infix {
-  border: black;
+table input {
+  text-align: center;
 }
-.mat-form-field-wrapper {
-  border: black;
+.form-header {
+  text-align: center;
 }
