--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -168,6 +168,7 @@
             <td>
               <input
                 type="number"
+                step="0.1"
                 [(ngModel)]="totalAmount"
                 [ngModelOptions]="{ standalone: true }"
               />
