fix: made the actual quantity amount field readonly

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -169,7 +169,10 @@
               <input
                 type="number"
                 [(ngModel)]="totalAmount"
-                [ngModelOptions]="{ standalone: true }"
+                [ngModelOptions]="{
+                  standalone: true
+                }"
+                readonly
               />
             </td>
           </tr>
