style: Modified colors and magnitude of precision of the float points

--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -93,11 +93,15 @@
                 </tr>
               </tbody>
             </table>
-            <button class="btn btn-group btn-primary" type="submit">
+            <button class="btn btn-group btn-primary theme-color" type="submit">
               Complete
             </button>
-            <button class="btn btn-group btn-primary">Incomplete</button>
-            <button class="btn btn-group btn-primary">Run Validation</button>
+            <button class="btn btn-group btn-primary theme-color">
+              Incomplete
+            </button>
+            <button class="btn btn-group btn-primary theme-color">
+              Run Validation
+            </button>
           </form>
         </div>
       </div>
