--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -2,6 +2,7 @@
   <div class="card-header">
     Verfication Form
   </div>
+  {{ verificationData | json }}
   <div class="row">
     <ngx-dhis2-selection-filters
       (filterUpdate)="onFilterUpdateAction($event)"
@@ -15,8 +16,6 @@
   <div class="form" *ngIf="showForm">
     <!-- Main Form display ground -->
     <form name="verificationForm">
-      {{ verArray | json }}
-
       <h3>
         {{ dataSelections[0].items[0].type | titlecase }}
         {{ orgUnitLevel$ | async | titlecase }}
@@ -94,10 +93,13 @@
                 <td class="tdwithin">
                   <input
                     type="number"
-                    [(ngModel)]="verArray[sno].months[columnIndex]"
+                    [(ngModel)]="months[sno]"
                     [ngModelOptions]="{ standalone: true }"
-                    (blur)="onVerBlur(sno, columnIndex)"
+                    (blur)="onVerUpdate(sno, columnIndex)"
                   />
+                  {{ sno }}{{ columnIndex }}={{
+                    verArray[sno].months[columnIndex]
+                  }}
                 </td>
               </tr>
             </td>
