refactor(Verification Component): Modified the model of the verification form

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -34,9 +34,9 @@
             <th
               scope="col"
               class="iteration"
-              *ngFor="let iteration of periodLooper"
+              *ngFor="let iteration of verificationData[0].monthlyValues"
             >
-              {{ iteration }}
+              {{ iteration.periodId }}
             </th>
             <th scope="col">
               Total Declared (Rep.#)
@@ -60,7 +60,10 @@
           <tr>
             <th
               scope="col"
-              *ngFor="let iteration of periodLooper; let i = index"
+              *ngFor="
+                let iteration of verificationData[0].monthlyValues;
+                let i = index
+              "
               class="iteration"
             >
               <tr class="trwithin">
@@ -76,30 +79,34 @@
           </tr>
         </thead>
         <tbody>
-          <tr
-            *ngFor="
-              let indicatior of verificationConfig$ | async;
-              let sno = index
-            "
-          >
+          <tr *ngFor="let indicatior of verificationData; let sno = index">
             <th scope="row" class="sno">{{ sno + 1 }}</th>
             <td class="indicator">{{ indicatior.indicator }}</td>
             <td
-              *ngFor="let iteration of periodLooper; let columnIndex = index"
+              *ngFor="
+                let iteration of indicatior.monthlyValues;
+                let columnIndex = index
+              "
               class="iteration"
             >
               <tr class="trwithin">
-                <td class="tdwithin"><input value="0" disabled /></td>
+                <td class="tdwithin">
+                  <input
+                    [(ngModel)]="
+                      verificationData[sno].monthlyValues[columnIndex].rep
+                    "
+                    disabled
+                  />
+                </td>
                 <td class="tdwithin">
                   <input
                     type="number"
-                    [(ngModel)]="months[sno]"
+                    [(ngModel)]="
+                      verificationData[sno].monthlyValues[columnIndex].ver
+                    "
                     [ngModelOptions]="{ standalone: true }"
                     (blur)="onVerUpdate(sno, columnIndex)"
                   />
-                  {{ sno }}{{ columnIndex }}={{
-                    verArray[sno].months[columnIndex]
-                  }}
                 </td>
               </tr>
             </td>
