feat: created service and effect for daving the form data values

--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -51,7 +51,7 @@
                   <td>
                     <input
                       type="number"
-                      (blur)="onInputBlur(sno)"
+                      (blur)="onInputBlur(sno, indicator.dataElement)"
                       (keyup)="onInputChange(sno)"
                       [(ngModel)]="obtainedValue[sno]"
                       [ngModelOptions]="{ standalone: true }"
