--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -36,7 +36,7 @@
               class="iteration"
               *ngFor="let iteration of verificationData[0].monthlyValues"
             >
-              {{ iteration.periodId }}
+              {{ iteration.periodName }}
             </th>
             <th scope="col">
               Total Declared (Rep.#)
@@ -51,7 +51,6 @@
               {{ dataSelections[0].items[0].type | titlecase }}
               Provisional Total Amount
             </th>
-            <!-- Tolerance rate percentage is needed here -->
             <th scope="col" rowspan="2">
               Loss Due to above {{ errorRate$ | async }}% & Above Error
             </th>
@@ -92,9 +91,11 @@
               <tr class="trwithin">
                 <td class="tdwithin">
                   <input
+                    type="number"
                     [(ngModel)]="
                       verificationData[sno].monthlyValues[columnIndex].rep
                     "
+                    [ngModelOptions]="{ standalone: true }"
                     disabled
                   />
                 </td>
@@ -147,6 +148,7 @@
             <td>{{ indicatior.unitFee }}</td>
             <td>
               <input
+                class="wide-input"
                 type="number"
                 [(ngModel)]="provisionalAmount[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -156,6 +158,7 @@
             </td>
             <td>
               <input
+                class="wide-input"
                 type="number"
                 [(ngModel)]="loss[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -165,6 +168,7 @@
             </td>
             <td>
               <input
+                class="wide-input"
                 type="number"
                 [(ngModel)]="actualAmount[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -181,6 +185,7 @@
             </td>
             <td>
               <input
+                class="wide-input"
                 type="number"
                 step="0.1"
                 [(ngModel)]="totalAmount"
