fix: generated verification form layout from the store

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -14,6 +14,7 @@
   </div>
   <div class="form" *ngIf="showForm">
     <!-- Main Form display ground -->
+    {{ tableStructure | async | json }}
     <form name="verificationForm">
       <h3>
         {{ dataSelections[0].items[0].type | titlecase }}
