refactor(Verification Component): Modified the methods resiponsible for the form rendering

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -67,8 +67,8 @@
               </tr>
             </th>
 
-            <th scope="col">(Rep.#1 +Rep.#2 +Rep.#3)</th>
-            <th scope="col">(Ver.#1 +Ver.#2 +Ver.#3)</th>
+            <th scope="col">({{ rep }})</th>
+            <th scope="col">({{ ver }})</th>
             <th scope="col">(Rep.#-Ver.#)</th>
             <th scope="col">%(Rep.#-Ver.#) / Rep.#</th>
           </tr>
