--- a/src/app/pages/verification/components/verification/verification.component.css
+++ b/src/app/pages/verification/components/verification/verification.component.css
@@ -15,6 +15,7 @@
 .btn-form {
   width: 32%;
   margin: 3px;
+  text-align: center;
 }
 input {
   width: 4.5rem;
@@ -57,10 +58,11 @@ tbody {
 }
 .total {
   text-align: left;
+  font-weight: bold;
 }
 .theme-color {
   background-color: rgb(39, 102, 150);
 }
 .wide-input {
-  width: 100%;
+  width: 10rem;
 }
