--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -86,6 +86,7 @@
               <tr class="trwithin">
                 <td class="tdwithin">
                   <input
+                  class="form-control input-group-sm"
                     type="number"
                     [(ngModel)]="
                       verificationData[sno].monthlyValues[columnIndex].rep
@@ -96,6 +97,7 @@
                 </td>
                 <td class="tdwithin">
                   <input
+                  class="form-control input-group-sm"
                     type="number"
                     [(ngModel)]="
                       verificationData[sno].monthlyValues[columnIndex].ver
@@ -109,6 +111,7 @@
 
             <td>
               <input
+              class="form-control input-group-sm"
                 name="totalRep"
                 [(ngModel)]="totalRep[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -117,6 +120,7 @@
             </td>
             <td>
               <input
+              class="form-control input-group-sm"
                 [(ngModel)]="totalVer[sno]"
                 [ngModelOptions]="{ standalone: true }"
                 name="totalVer"
@@ -125,6 +129,7 @@
             </td>
             <td>
               <input
+              class="form-control input-group-sm"
                 [(ngModel)]="difference[sno]"
                 [ngModelOptions]="{ standalone: true }"
                 name="difference"
@@ -133,6 +138,7 @@
             </td>
             <td>
               <input
+              class="form-control input-group-sm"
                 type="number"
                 [(ngModel)]="error[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -143,7 +149,7 @@
             <td>{{ indicatior.unitFee }}</td>
             <td>
               <input
-                class="wide-input"
+                class="wide-input form-control input-group-sm"
                 type="number"
                 [(ngModel)]="provisionalAmount[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -153,7 +159,7 @@
             </td>
             <td>
               <input
-                class="wide-input"
+                class="wide-input form-control input-group-sm"
                 type="number"
                 [(ngModel)]="loss[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -163,7 +169,7 @@
             </td>
             <td>
               <input
-                class="wide-input"
+                class="wide-input form-control input-group-sm"
                 type="number"
                 [(ngModel)]="actualAmount[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -180,7 +186,7 @@
             </td>
             <td>
               <input
-                class="wide-input"
+                class="wide-input form-control input-group-sm"
                 type="number"
                 step="0.1"
                 [(ngModel)]="totalAmount"
