--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="card-header">
-    Verfication Form
+    <h4>{{ formTitle }}</h4>
   </div>
   <div class="row">
     <ngx-dhis2-selection-filters
@@ -14,12 +14,6 @@
   <div class="form" *ngIf="showForm">
     <!-- Main Form display ground -->
     <form name="verificationForm">
-      <h3>
-        {{ dataSelections[0].items[0].type | titlecase }}
-        {{ orgUnitLevel$ | async | titlecase }}
-        Data Verification Form
-      </h3>
-      <br />
       <h5>
         Organization Unit Name: <u>{{ dataSelections[1].items[0].name }}</u>
       </h5>
@@ -86,7 +80,7 @@
               <tr class="trwithin">
                 <td class="tdwithin">
                   <input
-                  class="form-control input-group-sm"
+                    class="form-control input-group-sm"
                     type="number"
                     [(ngModel)]="
                       verificationData[sno].monthlyValues[columnIndex].rep
@@ -97,7 +91,7 @@
                 </td>
                 <td class="tdwithin">
                   <input
-                  class="form-control input-group-sm"
+                    class="form-control input-group-sm"
                     type="number"
                     [(ngModel)]="
                       verificationData[sno].monthlyValues[columnIndex].ver
@@ -111,7 +105,7 @@
 
             <td>
               <input
-              class="form-control input-group-sm"
+                class="form-control input-group-sm"
                 name="totalRep"
                 [(ngModel)]="totalRep[sno]"
                 [ngModelOptions]="{ standalone: true }"
@@ -120,7 +114,7 @@
             </td>
             <td>
               <input
-              class="form-control input-group-sm"
+                class="form-control input-group-sm"
                 [(ngModel)]="totalVer[sno]"
                 [ngModelOptions]="{ standalone: true }"
                 name="totalVer"
@@ -129,7 +123,7 @@
             </td>
             <td>
               <input
-              class="form-control input-group-sm"
+                class="form-control input-group-sm"
                 [(ngModel)]="difference[sno]"
                 [ngModelOptions]="{ standalone: true }"
                 name="difference"
@@ -138,7 +132,7 @@
             </td>
             <td>
               <input
-              class="form-control input-group-sm"
+                class="form-control input-group-sm"
                 type="number"
                 [(ngModel)]="error[sno]"
                 [ngModelOptions]="{ standalone: true }"
