style: Modified the padding and the indets of the page

--- a/src/app/pages/assessment/components/assessment/assessment.component.css
+++ b/src/app/pages/assessment/components/assessment/assessment.component.css
@@ -58,3 +58,9 @@ table input {
 .form-control {
   display: inline-block;
 }
+.filter {
+  padding: 0.2rem 2rem;
+}
+form {
+  padding: 0.2rem 1.25rem;
+}
