--- a/src/app/pages/verification/components/verification/verification.component.css
+++ b/src/app/pages/verification/components/verification/verification.component.css
@@ -65,3 +65,9 @@ tbody {
 .form-control[readonly] {
   background-color: white;
 }
+.filter {
+  padding: 0.2rem 2rem;
+}
+form {
+  padding: 0.2rem 1.25rem;
+}
