--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     <h4>{{ formTitle }}</h4>
   </div>
-  <div class="row">
+  <div class=" filter row">
     <ngx-dhis2-selection-filters
       (filterUpdate)="onFilterUpdateAction($event)"
       [dataSelections]="dataSelections"
