refactor: Removed unnecessary filters from report and budget components

--- a/src/app/pages/report/components/report/report.component.html
+++ b/src/app/pages/report/components/report/report.component.html
@@ -1,8 +1,1 @@
-<ngx-dhis2-selection-filters
-  (filterUpdate)="onFilterUpdateAction($event)"
-  [dataSelections]="dataSelections"
-  [selectionFilterConfig]="selectionFilterConfig"
-  (update)="onFilterUpdateAction($event)"
->
-</ngx-dhis2-selection-filters>
-{{ dataSelections | json }}
+<h5>Reports will be generated here</h5>
