style: Modified the view of the table manipulation

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -19,7 +19,7 @@
       </h5>
       <br />
       <table class="table table-bordered table-hover table-sm">
-        <thead class="card-header">
+        <thead>
           <tr>
             <th scope="col" rowspan="2" class="sno">S/No</th>
             <th scope="col" rowspan="2" class="indicator">Indicator</th>
@@ -80,7 +80,7 @@
               <tr class="trwithin">
                 <td class="tdwithin">
                   <input
-                    class="form-control input-group-sm"
+                    class=" input-within form-control input-group-sm"
                     type="number"
                     [(ngModel)]="
                       verificationData[sno].monthlyValues[columnIndex].rep
@@ -91,7 +91,7 @@
                 </td>
                 <td class="tdwithin">
                   <input
-                    class="form-control input-group-sm"
+                    class="input-within form-control input-group-sm"
                     type="number"
                     [(ngModel)]="
                       verificationData[sno].monthlyValues[columnIndex].ver
